--- a/index.css
+++ b/index.css
@@ -52,3 +52,14 @@
   margin: 10px;
   cursor: pointer;
 }
+
+.shimmer-container{
+  display: flex;
+}
+
+.shimmer-card {
+  width: 200px;
+  height: 400px;
+  background-color: #f0f0f0;
+  margin: 20px;
+}
